# tiny-key-value-C

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tiny-kv
include/: tinykv.h
src/: main.c  tinykv.c
tests/: basic_test.c
